--- a/package.json
+++ b/package.json
@@ -1,20 +1,56 @@
 {
   "name": "overwatch-favorites",
-  "version": "0.1.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {},
+  "version": "0.4.0",
+  "main": "build/app.js",
+  "scripts": {
+    "compile": "tsc && node ./build/app.js",
+    "dev": "nodemon -e ts --exec \"npm run compile\""
+  },
   "repository": {
     "type": "git",
     "url": "git+https://gitlab.com/finek/wnm_overwatchprofile.git"
   },
   "author": "Denis Anashkin",
-  "license": "ISC",
   "bugs": {
     "url": "https://gitlab.com/finek/wnm_overwatchprofile/issues"
   },
   "homepage": "https://gitlab.com/finek/wnm_overwatchprofile#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@hapi/joi": "^17.1.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/config": "0.0.36",
+    "@types/express": "^4.17.2",
+    "@types/hapi__joi": "^16.0.8",
+    "@types/helmet": "0.0.45",
+    "@types/http-errors": "^1.6.3",
+    "@types/jsonwebtoken": "^8.3.7",
+    "@types/lodash": "^4.14.149",
+    "@types/multer": "^1.3.10",
+    "@types/node": "^13.5.0",
+    "@types/node-cleanup": "^2.1.1",
+    "@types/passport": "^1.0.2",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/pg": "^7.14.1",
+    "bcrypt": "^3.0.7",
+    "config": "^3.2.5",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^3.21.2",
+    "http-errors": "^1.7.3",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "multer": "^1.4.2",
+    "node-cleanup": "^2.1.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "pg": "^7.17.1",
+    "typescript": "^3.7.5",
+    "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript-prettier": "^1.4.2",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1"
   }
 }
