--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/cheerio": "^0.22.15",
     "@types/config": "0.0.36",
     "@types/express": "^4.17.2",
     "@types/hapi__joi": "^16.0.8",
@@ -31,7 +32,9 @@
     "@types/passport": "^1.0.2",
     "@types/passport-jwt": "^3.0.3",
     "@types/pg": "^7.14.1",
+    "@types/superagent": "^4.1.4",
     "bcrypt": "^3.0.7",
+    "cheerio": "^1.0.0-rc.3",
     "config": "^3.2.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -44,6 +47,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^7.17.1",
+    "superagent": "^5.2.1",
     "typescript": "^3.7.5",
     "winston": "^3.2.1"
   },
